--- a/telegram-bot/build.gradle
+++ b/telegram-bot/build.gradle
@@ -20,9 +20,11 @@ repositories {
 }
 
 dependencies {
+    implementation project(':stocks-core')
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'org.springframework.statemachine:spring-statemachine-starter:3.0.1'
 
     implementation 'org.flywaydb:flyway-core'
     runtimeOnly 'org.postgresql:postgresql'
